--- a/aplicacion/app/src/main/res/layout/principal.xml
+++ b/aplicacion/app/src/main/res/layout/principal.xml
@@ -40,6 +40,17 @@
             android:layout_weight="1"
             android:text="Más cercano" />
 
+        <Button
+            android:id="@+id/registerButton"
+            android:onClick="registerButtonTapped"
+            android:text="Register"
+            style="@style/CustomButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:layout_marginStart="8dp"
+            android:visibility="visible"/>
+
     </LinearLayout>
 
     <LinearLayout
