Add email field to registration form and update login form to accept username or email

--- a/aplicacion/app/src/main/res/layout/activity_login.xml
+++ b/aplicacion/app/src/main/res/layout/activity_login.xml
@@ -32,10 +32,10 @@
             android:visibility="gone" />
 
         <EditText
-            android:id="@+id/usernameEditText"
+            android:id="@+id/usernameOrEmailEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nombre de usuario" />
+            android:hint="Nombre de usuario/Email" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordTextInputLayout"
