--- a/aplicacion/app/src/main/res/layout/activity_register.xml
+++ b/aplicacion/app/src/main/res/layout/activity_register.xml
@@ -38,6 +38,12 @@
             android:layout_height="wrap_content"
             android:hint="Nombre de usuario" />
 
+        <EditText
+            android:id="@+id/emailEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordTextInputLayout"
             android:layout_width="match_parent"
