--- a/aplicacion/app/src/main/res/values/colors.xml
+++ b/aplicacion/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#153448</color> <!-- Verde azulado -->
-    <color name="colorPrimaryDark">#3C5B6F</color> <!-- Verde azulado oscuro -->
-    <color name="colorAccent">#948979</color> <!-- Naranja oscuro -->
-    <color name="White">#FFFFFF</color> <!-- Blanco -->
-    <color name="lightGray">#DFD0B8</color> <!-- Gris claro -->
+    <color name="colorSecondary">#3C5B6F</color> <!-- Verde azulado oscuro -->
+    <color name="colorAccent">#786F62</color> <!-- Naranja oscuro -->
+    <color name="colorAccentLight">#DFD0B8</color> <!-- Gris claro -->
+    <color name="white">#FFFFFF</color> <!-- Blanco -->
     <color name="red">#E64A19</color> <!-- Rojo oscuro -->
 </resources>
