Cambios en excepciones y de estilos

--- a/aplicacion/app/src/main/res/layout/activity_login.xml
+++ b/aplicacion/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/lightGray">
+    android:background="@color/colorAccentLight">
 
     <TextView
         android:id="@+id/titleTextView"
@@ -42,7 +42,8 @@
                 android:id="@+id/usernameOrEmailEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                 />
+                android:inputType="textPersonName"
+                android:imeOptions="actionNext"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -59,7 +60,8 @@
                 android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:imeOptions="actionDone"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
