--- a/aplicacion/app/src/main/res/layout/activity_personas_por_habitacion.xml
+++ b/aplicacion/app/src/main/res/layout/activity_personas_por_habitacion.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorAccentLight">
+
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/colorAccent"
+        android:textSize="30sp"
+        android:text="Habitaciones ocupadas"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,6 +36,15 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/emptyTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No existe ningun registro de entrada aún."
+        android:gravity="center"
+        android:textColor="@color/colorAccent"
+        android:visibility="gone" />
 
     <ListView
         android:id="@+id/listView"
