--- a/aplicacion/app/src/main/res/layout/activity_habitacion_por_letra.xml
+++ b/aplicacion/app/src/main/res/layout/activity_habitacion_por_letra.xml
@@ -23,6 +23,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/CustomTextInputLayout"
             android:id="@+id/letraTextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -30,6 +31,7 @@
             android:hint="Introduce una letra">
 
             <com.google.android.material.textfield.TextInputEditText
+                style="@style/CustomTextInputEditText"
                 android:id="@+id/letraEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -67,19 +69,36 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/emptyTextView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="No existen registros para ninguna habitación del módulo."
-        android:textColor="@color/colorAccent"
-        android:gravity="center"
-        android:visibility="gone" />
+        android:layout_height="wrap_content">
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp" />
+        <TextView
+            android:id="@+id/emptyTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No existen registros para ninguna habitación del módulo."
+            android:gravity="center"
+            android:textColor="@color/colorAccent"
+            android:visibility="gone"
+            android:layout_centerInParent="true"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:indeterminateTint="@color/colorPrimary"
+            android:indeterminate="true"
+            android:layout_centerInParent="true"/>
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            />
+
+    </RelativeLayout>
 
 </LinearLayout>
