--- a/aplicacion/app/src/main/res/layout/activity_login.xml
+++ b/aplicacion/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,7 @@
             android:visibility="gone" />
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/CustomTextInputLayout"
             android:id="@+id/usernameOrEmailTextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,6 +40,7 @@
             android:hint="Nombre de usuario/Email">
 
             <com.google.android.material.textfield.TextInputEditText
+                style="@style/CustomTextInputEditText"
                 android:id="@+id/usernameOrEmailEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -49,6 +51,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/CustomTextInputLayout"
             android:id="@+id/passwordTextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -57,6 +60,7 @@
             android:hint="Contraseña">
 
             <com.google.android.material.textfield.TextInputEditText
+                style="@style/CustomTextInputEditText"
                 android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -65,12 +69,7 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_gravity="center"/>
+
 
         <Button
             android:id="@+id/loginButton"
@@ -79,6 +78,16 @@
             android:layout_height="wrap_content"
             android:text="Iniciar sesión" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:indeterminateTint="@color/colorPrimary"
+            android:layout_margin="20dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:indeterminate="true"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
 
