--- a/aplicacion/app/src/main/res/layout/activity_personas_por_habitacion.xml
+++ b/aplicacion/app/src/main/res/layout/activity_personas_por_habitacion.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorAccentLight">
+    android:background="@color/colorAccentLight"
+    android:gravity="center">
 
     <TextView
         android:id="@+id/titleTextView"
@@ -37,18 +38,36 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/emptyTextView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="No existe ningun registro de entrada aún."
-        android:gravity="center"
-        android:textColor="@color/colorAccent"
-        android:visibility="gone" />
+        android:layout_height="wrap_content">
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <TextView
+            android:id="@+id/emptyTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No existe ningun registro de entrada aún."
+            android:gravity="center"
+            android:textColor="@color/colorAccent"
+            android:visibility="gone" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/colorPrimary"
+            android:layout_gravity="center"
+            android:layout_centerInParent="true"/>
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp" />
+
+    </RelativeLayout>
+
 
 </LinearLayout>
