--- a/aplicacion/app/src/main/res/values/styles.xml
+++ b/aplicacion/app/src/main/res/values/styles.xml
@@ -1,24 +1,30 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorSecondary</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">Roboto</item>
+
     </style>
 
     <style name="CustomButtonStyle" parent="Widget.AppCompat.Button">
-
         <item name="android:background">@drawable/custom_button_background</item>
-
         <item name="android:textColor">@color/white</item>
-
         <item name="android:textSize">15sp</item>
+        <item name="android:textAllCaps">false</item>
 
-        <item name="android:paddingStart">12dp</item>
-        <item name="android:paddingEnd">12dp</item>
-        <item name="android:paddingTop">12dp</item>
-        <item name="android:paddingBottom">12dp</item>
+    </style>
+
+    <style name="CustomTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/colorSecondary</item>
+        <item name="hintTextColor">@color/colorPrimary</item>
+    </style>
+
+    <!-- Estilo personalizado para TextInputEditText -->
+    <style name="CustomTextInputEditText" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
+        <item name="android:textColor">@color/colorAccentDark</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
 </resources>
