--- a/aplicacion/app/src/main/res/values/colors.xml
+++ b/aplicacion/app/src/main/res/values/colors.xml
@@ -1,10 +1,143 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#153448</color> <!-- Verde azulado -->
-    <color name="colorSecondary">#3C5B6F</color> <!-- Verde azulado oscuro -->
-    <color name="colorAccent">#786F62</color>
-    <color name="colorAccentDark">#453F38</color>
-    <color name="colorAccentLight">#DFD0B8</color>
-    <color name="white">#FFFFFF</color> <!-- Blanco -->
-    <color name="red">#E64A19</color> <!-- Rojo oscuro -->
+    <color name="md_theme_primary">#002235</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#254357</color>
+    <color name="md_theme_onPrimaryContainer">#BAD8F2</color>
+    <color name="md_theme_secondary">#27475A</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#4C6B7F</color>
+    <color name="md_theme_onSecondaryContainer">#FFFFFF</color>
+    <color name="md_theme_tertiary">#534B3F</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#786F62</color>
+    <color name="md_theme_onTertiaryContainer">#FFFFFF</color>
+    <color name="md_theme_error">#DD1414</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#410002</color>
+    <color name="md_theme_background">#FAF9FB</color>
+    <color name="md_theme_onBackground">#1A1C1D</color>
+    <color name="md_theme_surface">#FAF9FB</color>
+    <color name="md_theme_onSurface">#1A1C1D</color>
+    <color name="md_theme_surfaceVariant">#DFE3E9</color>
+    <color name="md_theme_onSurfaceVariant">#42474C</color>
+    <color name="md_theme_outline">#73787D</color>
+    <color name="md_theme_outlineVariant">#C2C7CD</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#2F3032</color>
+    <color name="md_theme_inverseOnSurface">#F1F0F2</color>
+    <color name="md_theme_inversePrimary">#ACCAE3</color>
+    <color name="md_theme_primaryFixed">#C9E6FF</color>
+    <color name="md_theme_onPrimaryFixed">#001E2F</color>
+    <color name="md_theme_primaryFixedDim">#ACCAE3</color>
+    <color name="md_theme_onPrimaryFixedVariant">#2D4A5F</color>
+    <color name="md_theme_secondaryFixed">#C6E7FF</color>
+    <color name="md_theme_onSecondaryFixed">#001E2D</color>
+    <color name="md_theme_secondaryFixedDim">#ABCBE2</color>
+    <color name="md_theme_onSecondaryFixedVariant">#2B4A5E</color>
+    <color name="md_theme_tertiaryFixed">#EDE1D1</color>
+    <color name="md_theme_onTertiaryFixed">#201B11</color>
+    <color name="md_theme_tertiaryFixedDim">#D0C5B6</color>
+    <color name="md_theme_onTertiaryFixedVariant">#4D463A</color>
+    <color name="md_theme_surfaceDim">#DADADB</color>
+    <color name="md_theme_surfaceBright">#FAF9FB</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F4F3F5</color>
+    <color name="md_theme_surfaceContainer">#EEEDEF</color>
+    <color name="md_theme_surfaceContainerHigh">#E9E8EA</color>
+    <color name="md_theme_surfaceContainerHighest">#E3E2E4</color>
+    <color name="md_theme_primary_mediumContrast">#002235</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#254357</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#274659</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#4C6B7F</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#494236</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#786F62</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#8C0009</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#DA342E</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#FAF9FB</color>
+    <color name="md_theme_onBackground_mediumContrast">#1A1C1D</color>
+    <color name="md_theme_surface_mediumContrast">#FAF9FB</color>
+    <color name="md_theme_onSurface_mediumContrast">#1A1C1D</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#DFE3E9</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#3E4348</color>
+    <color name="md_theme_outline_mediumContrast">#5B6065</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#767B81</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#2F3032</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#F1F0F2</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#ACCAE3</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#5B788F</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#425F75</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#59788D</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#416074</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#7C7366</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#635B4E</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#DADADB</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#FAF9FB</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F4F3F5</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#EEEDEF</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#E9E8EA</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#E3E2E4</color>
+    <color name="md_theme_primary_highContrast">#002235</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#254357</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#002537</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#274659</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#272117</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#494236</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#4E0002</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#8C0009</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#FAF9FB</color>
+    <color name="md_theme_onBackground_highContrast">#1A1C1D</color>
+    <color name="md_theme_surface_highContrast">#FAF9FB</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#DFE3E9</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#1F2429</color>
+    <color name="md_theme_outline_highContrast">#3E4348</color>
+    <color name="md_theme_outlineVariant_highContrast">#3E4348</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#2F3032</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#DCEEFF</color>
+    <color name="md_theme_primaryFixed_highContrast">#28465B</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#0F2F43</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#274659</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#0D3042</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#494236</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#322C21</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#DADADB</color>
+    <color name="md_theme_surfaceBright_highContrast">#FAF9FB</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F4F3F5</color>
+    <color name="md_theme_surfaceContainer_highContrast">#EEEDEF</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#E9E8EA</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#E3E2E4</color>
 </resources>
