--- a/aplicacion/app/src/main/res/drawable/text_view_border.xml
+++ b/aplicacion/app/src/main/res/drawable/text_view_border.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorAccentLight" />
-    <corners android:radius="5dp" />
-    <stroke android:color="@color/colorPrimary" android:width="1dp" />
+    <solid android:color="@android:color/transparent" />
+    <stroke android:color="@color/md_theme_outline" android:width="1dp" />
+    <corners android:radius="4dp" />
 </shape>
