--- a/aplicacion/app/src/main/res/layout/activity_historico_personas.xml
+++ b/aplicacion/app/src/main/res/layout/activity_historico_personas.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/colorAccentLight">
+    android:orientation="vertical">
+
+    <TextView
+        style="@style/MyTitleTextStyle"
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Historico"
+         />
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/CustomTextInputLayout"
+        style="@style/MyTextInputLayoutStyle"
         android:id="@+id/habitacionTextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:startIconDrawable="@drawable/ic_room"
         android:hint="Habitación">
 
         <com.google.android.material.textfield.TextInputEditText
-            style="@style/CustomTextInputEditText"
             android:id="@+id/habitacionEditText"
             android:layout_width="match_parent"
+            android:inputType="textPersonName"
             android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -26,25 +36,25 @@
         android:orientation="horizontal">
 
         <TextView
+            style="@style/MyNormalTextStyle"
+            android:background="@drawable/text_view_border"
             android:id="@+id/fechaInicioTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/text_view_border"
             android:padding="10dp"
             android:hint="Fecha inicio"
-            android:textSize="16sp"
             android:clickable="true"
             android:focusable="true" />
 
         <TextView
+            style="@style/MyNormalTextStyle"
+            android:background="@drawable/text_view_border"
             android:id="@+id/fechaFinTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/text_view_border"
             android:padding="10dp"
-            android:textSize="16sp"
             android:hint="Fecha fin"
             android:clickable="true"
             android:focusable="true" />
@@ -53,18 +63,11 @@
 
     <Button
         android:id="@+id/buscarButton"
-        style="@style/CustomButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Buscar" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -73,32 +76,47 @@
         android:padding="16dp">
 
         <TextView
+            style="@style/MyNormalTextStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Habitación"
-            android:textStyle="bold" />
+            android:text="Habitación" />
 
         <TextView
+            style="@style/MyNormalTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Número de Personas"
-            android:textStyle="bold" />
+            android:text="Número de Personas" />
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/listView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/emptyTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="No hay registros"
-        android:visibility="gone" />
+        <TextView
+            android:id="@+id/emptyTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No existen registros para ninguna habitación del módulo."
+            android:gravity="center"
+            android:visibility="gone"
+            android:layout_centerInParent="true"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:indeterminate="true"
+            android:layout_centerInParent="true" />
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"/>
+
+    </RelativeLayout>
 
 </LinearLayout>
