--- a/aplicacion/app/src/main/res/layout/activity_personas_por_habitacion.xml
+++ b/aplicacion/app/src/main/res/layout/activity_personas_por_habitacion.xml
@@ -4,18 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorAccentLight"
     android:gravity="center">
 
     <TextView
+        style="@style/MyTitleTextStyle"
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorAccent"
-        android:textSize="30sp"
-        android:text="Habitaciones ocupadas"
-        android:textStyle="bold" />
+        android:text="Habitaciones ocupadas" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,17 +21,17 @@
         android:padding="16dp">
 
         <TextView
+            style="@style/MyNormalTextStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Habitación"
-            android:textStyle="bold" />
+            android:text="Habitación" />
 
         <TextView
+            style="@style/MyNormalTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Número de Personas"
-            android:textStyle="bold" />
+            android:text="Número de Personas" />
 
     </LinearLayout>
 
@@ -48,7 +45,6 @@
             android:layout_height="wrap_content"
             android:text="No existe ningun registro de entrada aún."
             android:gravity="center"
-            android:textColor="@color/colorAccent"
             android:visibility="gone" />
 
         <ProgressBar
@@ -57,7 +53,6 @@
             android:layout_height="wrap_content"
             android:visibility="gone"
             android:indeterminate="true"
-            android:indeterminateTint="@color/colorPrimary"
             android:layout_gravity="center"
             android:layout_centerInParent="true"/>
 
