--- a/aplicacion/app/src/main/res/layout/activity_register.xml
+++ b/aplicacion/app/src/main/res/layout/activity_register.xml
@@ -3,18 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/colorAccentLight">
+    android:orientation="vertical">
 
     <TextView
+        style="@style/MyTitleTextStyle"
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorAccent"
-        android:text="Registro"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:text="Registro" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,74 +21,68 @@
         android:gravity="center">
 
         <TextView
+            style="@style/MyErrorTextStyle"
             android:id="@+id/errorTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textColor="@color/red"
-            android:textSize="16sp"
             android:visibility="gone" />
 
         <com.google.android.material.textfield.TextInputLayout
-            style="@style/CustomTextInputLayout"
+            style="@style/MyTextInputLayoutStyle"
             android:id="@+id/usernameTextInputLayout"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:startIconDrawable="@drawable/ic_username"
-            android:layout_height="wrap_content">
+            android:hint="Nombre de usuario">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/usernameEditText"
-                style="@style/CustomTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:hint="Nombre de usuario"
-                android:imeOptions="actionNext"/>
+                android:imeOptions="actionNext"
+                />
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            style="@style/CustomTextInputLayout"
+            style="@style/MyTextInputLayoutStyle"
             android:id="@+id/emailTextInputLayout"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:startIconDrawable="@drawable/ic_email"
-            android:layout_height="wrap_content">
+            android:hint="Email">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/emailEditText"
-                style="@style/CustomTextInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Email"
                 android:imeOptions="actionNext"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
         <com.google.android.material.textfield.TextInputLayout
-            style="@style/CustomTextInputLayout"
+            style="@style/MyTextInputLayoutStyle"
             android:id="@+id/passwordTextInputLayout"
             android:layout_width="match_parent"
-            app:startIconDrawable="@drawable/ic_password"
             android:layout_height="wrap_content"
-            app:endIconMode="password_toggle">
+            app:startIconDrawable="@drawable/ic_password"
+            app:endIconMode="password_toggle"
+            android:hint="Contraseña">
 
             <com.google.android.material.textfield.TextInputEditText
-                style="@style/CustomTextInputEditText"
                 android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Contraseña"
                 android:inputType="textPassword"
                 android:imeOptions="actionDone"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
         <Button
             android:id="@+id/registerButton"
-            style="@style/CustomButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Registrarse" />
@@ -102,7 +93,6 @@
             android:layout_width="match_parent"
             android:layout_margin="20dp"
             android:layout_height="wrap_content"
-            android:indeterminateTint="@color/colorPrimary"
             android:indeterminate="true"
             android:visibility="gone"
             android:layout_gravity="center"/>
