--- a/aplicacion/app/src/main/res/values/theme.xml
+++ b/aplicacion/app/src/main/res/values/theme.xml
@@ -61,10 +61,10 @@
         <item name="errorTextColor">@color/md_theme_error</item>
     </style>
 
-    <style name="MyTitleTextStyle" parent="TextAppearance.Material3.HeadlineMedium">
+    <style name="MyTitleTextStyle" parent="TextAppearance.Material3.HeadlineLarge">
         <item name="android:textColor">@color/md_theme_primary</item>
-        <item name="android:textSize">30sp</item>
-        <item name="android:textStyle">bold</item>
+<!--        <item name="android:textSize">30sp</item>-->
+<!--        <item name="android:textStyle">bold</item>-->
     </style>
 
     <style name="MyNormalTextStyle" parent="TextAppearance.Material3.DisplayMedium">
